--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8">
 
-  <title></title>
+  <title>Movies World</title>
 
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/main.min.css">
-  <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
+  <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
 </head>
 <body class="page__body page__body--nojs" id="siteBody">
   <script src="./js/nojs.min.js"></script>
@@ -34,7 +34,7 @@
 
   <!-- FOOTER part of page ended -->
 
-  <div class="container bg-danger text-white text-center py-3 px-2 rounded mb-4 disabled-script-info">
+  <div class="disabled-script-info container my-5 rounded bg-danger py-3 px-2 text-white text-center">
     Javascript application feature is disabled in your browser, please <a class="text-white font-weight-bold disabled-script-info__js-on-manual" href="https://www.enable-javascript.com/" target="_blank">enable javascript</a> to use the site
   </div>
 
