tried todo taskla using toast

--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
 <body class="page__body page__body--nojs" id="siteBody">
   <script src="./js/nojs.min.js"></script>
 
+  <h1 class="sr-only">Cinema World</h1>
+  <p class="sr-only">the purpose of the site is to help the user to watch the movie they need quickly and pleasantly</p>
+
   <!-- HEADER part of page started -->
 
-  <header></header>
+  <header class="site-header">
+    <div class="site-header__container">
+      <h2 class="site-header__title">Movies World</h2>
+      <p class="site-header__intro-paragraph">find your favorite movies easily and quickly</p>
+      <a class="site-header__more-button" href="#">More</a>
+    </div>
+  </header>
 
   <!-- HEADER part of page ended -->
 
